--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ hs_err_pid*
 ## Gradle
 ##############################
 bin/
-build/
+code/build/
 .gradle
 .gradletasknamecache
 gradle-app.setting
